--- a/everest.yaml
+++ b/everest.yaml
@@ -1,6 +1,6 @@
 ﻿- Name: Batteries
   Version: 1.1.0
-  DLL: Batteries.dll
+  DLL: Code/bin/Batteries.dll
   Dependencies:
     - Name: Everest
       Version: 1.0.0
